// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a Pill with border 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[8px] px-[4px] py-[8px] border-success border-[1px] rounded-[999999px]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
    >
      Icon
    </span>
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
      style="padding-top: 1px;"
    >
      My Second Pill Label
    </span>
  </div>
</DocumentFragment>
`;

exports[`renders a Pill without image 1`] = `
<DocumentFragment>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-center gap-[8px] px-[4px] py-[8px] bg-surface2 border-transparent border-[1px] rounded-[999999px]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)]"
      style="color: rgb(0, 0, 0); padding-top: 1px;"
    >
      My Pill Label
    </span>
  </div>
</DocumentFragment>
`;
